# Otus-Cpp-2025-HW-13-ML

./: CMakeLists.txt  ML_model_ evaluation.cpp  ML_model_ evaluation.h
.github/workflows/: release.yml
